add type barang
